add time period to release metadata section in header

--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -67,14 +67,17 @@ title: "Unemployment: August 2018"
     <div class=" border-top--darkastral background--astraldark-transparent">
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release date: 14 August 2018</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Time period:</strong> April to June 2018</p>
           </div>
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release frequency: Monthly</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Release date:</strong> 14 August 2018</p>
           </div>
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall" style="border-right:0;">Next release: 11 September 2018</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Release frequency:</strong> Monthly</p>
+          </div>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall" style="border-right:0;"><strong>Next release:</strong> 11 September 2018</p>
           </div>
         </div>
       </div>
