--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Unemployment: August 2018"
+title: "Unemployment"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
