breadcrumb name change and add longer months for time period release metadata

--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -30,7 +30,7 @@ title: "Unemployment"
                   <a class="breadcrumb__link astral-link" href="../overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Unemployment: August 2018
+                  Unemployment
                 </li>
               </ol>
             </div>
@@ -47,13 +47,13 @@ title: "Unemployment"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Estimates of unemployment for the UK.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of unemployment for the UK.</p>
         </div>
       </div>
     </div>
 
     <!-- latest panel  -->
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
@@ -61,14 +61,14 @@ title: "Unemployment"
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- release information -->
     <div class=" border-top--darkastral background--astraldark-transparent">
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall"><strong>Time period:</strong> April to June 2018</p>
+            <p class="font-xxsmall"><strong>Time period:</strong> October to December 2018</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
             <p class="font-xxsmall"><strong>Release date:</strong> 14 August 2018</p>
