--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -64,14 +64,17 @@ title: "Labour market: August 2018"
     <div class=" border-top--darkastral background--astraldark-transparent">
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release date: 14 August 2018</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Time period:</strong><br>October to December 2018</p>
           </div>
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release frequency: Monthly</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall" style="border-right:0;">Next release: 11 September 2018</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Release frequency:</strong><br>Monthly</p>
+          </div>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall" style="border-right:0;"><strong>Next release:</strong><br>11 September 2018</p>
           </div>
         </div>
       </div>
