Header update subtitle and time period.

--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -47,7 +47,7 @@ title: "Average weekly earnings"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Money paid per week, per job to employees in Great Britain in return for work done covering April to June 2018.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Money paid per week, per job to employees in Great Britain in return for work done.</p>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@ title: "Average weekly earnings"
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
-            <p class="panel panel-small background--0 font-xsmall"><span class="font-weight--bold">This page is not part of the latest labour market collection</span><span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest labour market collection</a></p>
+            <p class="panel panel-small background--0 font-xsmall"><span class="font-weight--bold">This is not the latest</span><span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest</a></p>
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@ title: "Average weekly earnings"
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall"><strong>Time period:</strong><br>October to December 2018</p>
+            <p class="font-xxsmall"><strong>Time period:</strong><br>April to June 2018</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
             <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
