--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Labour market: August 2018"
+title: "Labour market"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -44,13 +44,13 @@ title: "Labour market: August 2018"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Estimates of employment, unemployment, economic inactivity and other employment-related statistics for the UK.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of employment, unemployment, economic inactivity and other employment-related statistics for the UK.</p>
         </div>
       </div>
     </div>
 
     <!-- latest panel  -->
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
@@ -58,14 +58,14 @@ title: "Labour market: August 2018"
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- release information -->
     <div class=" border-top--darkastral background--astraldark-transparent">
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall"><strong>Time period:</strong><br>October to December 2018</p>
+            <p class="font-xxsmall"><strong>Time period:</strong><br>April to June 2018</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
             <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
