--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -47,7 +47,7 @@ title: "Employment"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of employment for the UK covering April to June 2018.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of employment for the UK.</p>
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@ title: "Employment"
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
-            <p class="font-xxsmall"><strong>Time period:</strong><br>October to December 2018</p>
+            <p class="font-xxsmall"><strong>Time period:</strong><br>April to June 2018</p>
           </div>
           <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
             <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
