update nav and section headings

--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -130,19 +130,16 @@ title: "Average weekly earnings"
                 <a href="#data">Average weekly earnings data</a>
               </li>
               <li>
-                <a href="#using-data">Measuring average weekly earnings</a>
+                <a href="#using-data">Glossary</a>
+              </li>
+              <li>
+                <a href="#using-data">Measuring this data</a>
               </li>
               <li>
                 <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
-                <a href="#using-data">Glossary</a>
-              </li>
-              <li>
-                <a href="#more-pages">More pages in this collection</a>
-              </li>
-              <li>
-                <a href="#more-about">More about average weekly earnings</a>
+                <a href="#more-about">Find out more</a>
               </li>
               <li>
                 <a href="#more-links">You may also be interested in</a>
@@ -266,7 +263,7 @@ title: "Average weekly earnings"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  Measuring average weekly earnings</p>
+                  Measuring this data</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Where does the data come from?</strong><br>
@@ -320,7 +317,7 @@ title: "Average weekly earnings"
           <!-- related links -->
 
 
-          <h2 id="more-about" class="margin-top--7">More about average weekly earnings</h2>
+          <h2 id="more-about" class="margin-top--7">Find out more</h2>
           <!-- <div class="content-box">
             <ul class="list--neutral margin-top--3">
               <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/labourmarketeconomiccommentary/latest">Labour market economic commentary</a></li>
