--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -129,19 +129,16 @@ title: "Employment"
                 <a href="#data">Employment data</a>
               </li>
               <li>
-                <a href="#using-data">Measuring employment</a>
+                <a href="#using-data">Glossary</a>
+              </li>
+              <li>
+                <a href="#using-data">Measuring this data</a>
               </li>
               <li>
                 <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
-                <a href="#using-data">Glossary</a>
-              </li>
-              <li>
-                <a href="#more-pages">More pages in this collection</a>
-              </li>
-              <li>
-                <a href="#more-about">More about employment</a>
+                <a href="#more-about">Find out more</a>
               </li>
               <li>
                 <a href="#more-links">You may also be interested in</a>
@@ -284,7 +281,7 @@ title: "Employment"
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
-                <p class="heading-small">Measuring employment</p>
+                <p class="heading-small">Measuring this data</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
               <p><strong>Where does the data come from?</strong><br>
@@ -339,7 +336,7 @@ title: "Employment"
           <!-- related links -->
 
 
-          <h2 id="more-about" class="margin-top--7">More about the labour market</h2>
+          <h2 id="more-about" class="margin-top--7">Find out more</h2>
           <!-- <div class="content-box">
             <ul class="list--neutral margin-top--3">
               <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/labourmarketeconomiccommentary/latest">Labour market economic commentary</a></li>
