--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -127,22 +127,16 @@ title: "Labour market"
                 <a href="#data">Labour market data</a>
               </li>
               <li>
-                <a href="#using-data">Measuring labour market data</a>
+                <a href="#using-data">Glossary</a>
+              </li>
+              <li>
+                <a href="#using-data">Measuring this data</a>
               </li>
               <li>
                 <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
-                <a href="#using-data">Glossary</a>
-              </li>
-              <li>
-                <a href="#more-pages">More pages in this collection</a>
-              </li>
-              <li>
-                <a href="#more-about">More about labour market</a>
-              </li>
-              <li>
-                <a href="#methodology-links">Useful labour market methodology</a>
+                <a href="#more-about">Find out more</a>
               </li>
               <li>
                 <a href="#more-links">You may also be interested in</a>
@@ -352,7 +346,7 @@ title: "Labour market"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  Measuring labour market data</p>
+                  Measuring this data</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Where does the data come from?</strong><br>
@@ -405,7 +399,7 @@ title: "Labour market"
           <!-- related links -->
 
 
-          <h2 id="more-about" class="margin-top--7">More about the labour market</h2>
+          <h2 id="more-about" class="margin-top--7">Find out more</h2>
           <!-- <div class="content-box">
             <ul class="list--neutral margin-top--3">
               <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/labourmarketeconomiccommentary/latest">Labour market economic commentary</a></li>
@@ -431,18 +425,6 @@ title: "Labour market"
                 <p>Analysing the characteristics, income and wealth of the self-employed.</p>
               </li>
             </ul>
-          </div>
-
-          <h2 id="methodology-links" class="margin-top--7">Useful labour market methodology</h2>
-          <div class="content-box">
-              <ul class="list--neutral margin-top--4">
-                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/labourforcesurveylfsqmi">Labour Force Survey Quality and Methodology Information</a></li>
-                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyperformanceandqualitymonitoringreports">Labour Force Survey performance and quality monitoring reports</a></li>
-                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/vacancysurveyqmi">Vacancy Survey Quality and Methodology Information</a></li>
-                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/workforcejobsqmi">Workforce Jobs Quality and Methodology Information</a></li>
-                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/methodologies/averageweeklyearningsqmi">Average weekly earnings (AWE) Quality and Methodology Information</a></li>
-                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/workplacedisputesandworkingconditions/methodologies/labourdisputesinquiryqmi">Labour Disputes Quality and Methodology Information</a></li>
-              </ul>
           </div>
 
           <h2 id="more-links" class="margin-top--7">You may also be interested in</h2>
