--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -127,22 +127,19 @@ title: "Unemployment"
                 <a href="#analysis">Analysis of unemployment</a>
               </li>
               <li>
-                <a href="#data">Unemployment data</a>
-              </li>
-              <li>
-                <a href="#using-data">Measuring unemployment data</a>
-              </li>
-              <li>
-                <a href="#using-data">Strengths and limitations</a>
+                <a href="#data">Unmployment data</a>
               </li>
               <li>
                 <a href="#using-data">Glossary</a>
               </li>
               <li>
-                <a href="#more-pages">More pages in this collection</a>
+                <a href="#using-data">Measuring this data</a>
               </li>
               <li>
-                <a href="#more-about">More about unmployment</a>
+                <a href="#using-data">Strengths and limitations</a>
+              </li>
+              <li>
+                <a href="#more-about">Find out more</a>
               </li>
               <li>
                 <a href="#more-links">You may also be interested in</a>
@@ -259,7 +256,7 @@ title: "Unemployment"
             </div>
           </details>
 
-          <h2 id="using-data" class="margin-top--7">Using employment data</h2>
+          <h2 id="using-data" class="margin-top--7">Using unemployment data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -277,7 +274,7 @@ title: "Unemployment"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  Measuring unemployment data</p>
+                  Measuring this data</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Where does the data come from?</strong><br>
@@ -329,7 +326,7 @@ title: "Unemployment"
           <!-- related links -->
 
 
-          <h2 id="more-about" class="margin-top--7">More about the labour market</h2>
+          <h2 id="more-about" class="margin-top--7">Find out more</h2>
           <!-- <div class="content-box">
             <ul class="list--neutral margin-top--3">
               <li class=""><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/articles/labourmarketeconomiccommentary/latest">Labour market economic commentary</a></li>
