Change inste patten to info alert pattern

--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -219,8 +219,10 @@ title: "Average weekly earnings"
             <li>average regular pay (excluding bonuses) for employees in Great Britain was £461 per week before tax and other deductions from pay, £12 lower than the pre-downturn peak of £473 per week for March 2008</li>
             <li>average total pay (including bonuses) for employees in Great Britain was £489 per week before tax and other deductions from pay, £33 lower than the pre-downturn peak of £522 per week for February 2008</li>
           </ul>
-          <div class="inset-text">
-            <p class="panel">These estimates of average weekly earnings in real terms are calculated by deflating the nominal earnings estimates by the <a href="https://www.ons.gov.uk/economy/inflationandpriceindices/bulletins/consumerpriceinflation/latest">Consumer Prices Index including owner occupiers’ housing costs (CPIH)</a>, our preferred measure of consumer price inflation.</p>
+          <div class="info-alert">
+            <i class="icon icon-info">
+            </i>
+            <p>These estimates of average weekly earnings in real terms are calculated by deflating the nominal earnings estimates by the <a href="https://www.ons.gov.uk/economy/inflationandpriceindices/bulletins/consumerpriceinflation/latest">Consumer Prices Index including owner occupiers’ housing costs (CPIH)</a>, our preferred measure of consumer price inflation.</p>
           </div>
           <p class="list-heading">The CPIH figures and, consequently, the estimates of average weekly earnings in real terms, start in January 2005. Between January 2005 and June 2018:</p>
           <ul>
