--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -195,8 +195,10 @@ title: "Employment"
           <p class="heading-medium">Proportion of people in work has generally increased since 2012</p>
           <p>The lowest employment rate for people was 65.6% in 1983, during the economic downturn of the early 1980s. The employment rates for people, men and women have been generally increasing since early 2012. For the latest time period, April to June 2018, the employment rate for people was 75.6%, up from 75.1% for a year earlier.</p>
 
-          <div class="inset-text">
-            <p class="panel">Employment measures the number of people aged from 16 to 64 years in paid work. It differs from the number of jobs because some people have more than one job.</p>
+          <div class="info-alert">
+            <i class="icon icon-info">
+            </i>
+            <p>Employment measures the number of people aged from 16 to 64 years in paid work. It differs from the number of jobs because some people have more than one job.</p>
           </div>
 
           <p class="list-heading">For April to June 2018:</p>
@@ -234,9 +236,13 @@ title: "Employment"
             <li>employees increased by 369,000 to 27.45 million (84.8% of all people in work)</li>
             <li>self-employed people decreased by 38,000 to 4.77 million (14.7% of all people in work)</li>
           </ul>
-          <div class="inset-text">
-            <p class="panel">Employees and self-employed people do not account for all people in employment as there are two minor additional categories; unpaid family workers and people on government-supported training and employment programmes.</p>
+
+          <div class="info-alert">
+            <i class="icon icon-info">
+            </i>
+            <p>Employees and self-employed people do not account for all people in employment as there are two minor additional categories; unpaid family workers and people on government-supported training and employment programmes.</p>
           </div>
+          
           <p class="heading-medium">Fewer workers on zero-hours contracts</p>
           <p class="list-heading">Comparing the estimates for employment by nationality (not seasonally adjusted) for April to June 2018 with those for a year earlier:</p>
           <ul>
