--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -196,8 +196,10 @@ title: "Unemployment"
           <p class="heading-medium">UK unemployment continues to fall</p>
           <p><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics#unemployment">Unemployment</a> measures people without a job who have been actively seeking work within the last four weeks and are available to start work within the next two weeks.</p>
 
-          <div class="inset-text">
-            <p class="panel">The unemployment rate is not the proportion of the total population who are unemployed. It is the proportion of the economically active population (those in work plus those seeking and available to work) who are unemployed.</p>
+          <div class="info-alert">
+            <i class="icon icon-info">
+            </i>
+            <p>The unemployment rate is not the proportion of the total population who are unemployed. It is the proportion of the economically active population (those in work plus those seeking and available to work) who are unemployed.</p>
           </div>
 
           <p>As shown in our main chart (which shows unemployment rates for people, men and women), the lowest unemployment rate for people since comparable records began in 1971 was 3.4% in late 1973 to early 1974 and the highest rate, 11.9%, was in 1984 during the economic downturn of the early 1980s. The unemployment rate for people for the latest time period, April to June 2018, was 4.0%, the lowest since the mid-1970s.</p>
