Change quote name

--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -107,7 +107,7 @@ title: "Average weekly earnings"
           <blockquote class="header-quote">
             <img style="" src="{{ "/assets/img/quote.png" | relative_url }}" class="margin-bottom--2" alt="">
             <p class="margin-bottom--2">Between April to June 2017 and April to June 2018, in real terms (that is, adjusted for consumer price inflation), regular pay for employees in Great Britain increased by 0.4% and total pay for employees in Great Britain increased by 0.1%.</p>
-            <p class="font-xsmall"><span class="font-weight--bold">Sarah Smith,</span> Head of Labour Market Statistics</p>
+            <p class="font-xsmall"><span class="font-weight--bold">Richard Clegg,</span> Head of Labour Market Statistics</p>
           </blockquote>
         </div>
       </div>
