--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -104,7 +104,7 @@ title: "Labour market"
           <blockquote class="header-quote">
             <img style="" src="{{ "/assets/img/quote.png" | relative_url }}" class="margin-bottom--2" alt="">
             <p class="margin-bottom--2">Between January to March 2018 and April to June 2018, the numbers of people in work and economically inactive increased while the numbers of unemployed people decreased.</p>
-            <p class="font-xsmall"><span class="font-weight--bold">Sarah Smith,</span> Head of Labour Market Statistics</p>
+            <p class="font-xsmall"><span class="font-weight--bold">Richard Clegg,</span> Head of Labour Market Statistics</p>
           </blockquote>
         </div>
       </div>
