add glossary content

--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -333,12 +333,18 @@ title: "Labour market"
                   Glossary</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <!-- <p><strong>Employment</strong><br>
-                Employees, self-employed people, unpaid family workers and people on government-supported training and employment programmes.</p>
-                <p><strong>Unpaid family workers </strong><br>
-                People who work in a family business who do not receive a formal wage or salary but benefit from the profits of that business.</p>
-                <p><strong>Government-supported training and employment programmes series</strong><br>
-                This does not include all people on these programmes; it only includes people engaging in any form of work, work experience or work-related training who are not included in the employees or self-employed series. People on these programmes not engaging in any form of work, work experience or work-related training are not included in the employment estimates; they are classified as unemployed or economically inactive.</p> -->
+                <p><strong>Labour market statistics</strong><br>
+                A measure of many different aspects of the labour market that provide an insight into the economy. They are also very much about people, including: their participation in the labour force; the types of work they do; earnings and benefits they receive; their educational qualifications; and their working patterns.</p>
+                <p><strong>Employment and jobs</strong><br>
+                The number of people with jobs is not the same as the number of jobs. This is because a person can have more than one job. The number of people with jobs is measured by the Labour Force Survey (LFS). The number of jobs is measured by Workforce Jobs (WFJ) and is the sum of employee jobs from employer surveys, self-employment jobs from the LFS, those in HM Forces and government- supported trainees. The LFS also provides an estimate of the number of jobs, by adding main and second jobs, but the industry breakdown is less reliable. The LFS and WFJ measures are reconciled each quarter in an article published on our website. Jobs vacancies are measured separately by the Vacancy Survey.</p>
+                <p><strong>Employment rate</strong><br>
+                The headline employment rate is calculated by dividing the employment level for those aged from 16 to 64 by the population for that age group.</p>
+                <p><strong>Inactivity</strong><br>
+                Economically inactive people are those without a job who have not actively sought work in the last four weeks, and/or are not available to start work in the next two weeks.</p>
+                <p><strong>Unemployment</strong><br>
+                The number of unemployed people in the UK is measured through the Labour Force Survey (LFS) following the internationally agreed definition recommended by the International Labour Organisation (ILO) – an agency of the United Nations. Unemployed people are without a job, have actively sought work in the last four weeks and are available to start work in the next two weeks; or are out of work, have found a job and are waiting to start it in the next two weeks.</p>
+                <p><strong>Unemployment rate</strong><br>
+                The headline unemployment rate is calculated by dividing the unemployment level for those aged 16 and over by the total number of economically active people aged 16 and over. Economically active is defined as those in employment plus those who are unemployed.</p>
               </div>
             </div>
           </div>
