--- a/sprint/3/labour-market/summary-table/index.html
+++ b/sprint/3/labour-market/summary-table/index.html
@@ -46,14 +46,14 @@ title: "Labour market status by age group"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Nulla amet non enim sunt dolor dolor Lorem excepteur cupidatat irure consequat.</p>
+          <h1 class="margin-bottom--4">{{ page.title }}</h1>
+          <!-- <p class="margin-top--1 heading-medium font-weight--normal">Nulla amet non enim sunt dolor dolor Lorem excepteur cupidatat irure consequat.</p> -->
         </div>
       </div>
     </div>
 
     <!-- latest panel  -->
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
@@ -61,20 +61,23 @@ title: "Labour market status by age group"
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- release information -->
     <div class=" border-top--darkastral background--astraldark-transparent">
       <div class="wrapper">
         <div class="col-wrap header-meta-wrap">
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release date: 26 April 2018</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Time period:</strong><br>April to June 2018</p>
           </div>
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall">Release frequency: Quarterly</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Release date:</strong><br>14 August 2018</p>
           </div>
-          <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall" style="border-right:0;">Next release: September 2018 (provisional)</p>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall"><strong>Release frequency:</strong><br>Monthly</p>
+          </div>
+          <div class="col col--md-one-quarter col--lg-one-quarter header-meta">
+            <p class="font-xxsmall" style="border-right:0;"><strong>Next release:</strong><br>11 September 2018</p>
           </div>
         </div>
       </div>
@@ -86,35 +89,7 @@ title: "Labour market status by age group"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-
-          <h2 class="margin-top--3 margin-bottom--0">Summary table</h2>
-          <p class="font-xxsmall margin-top--2 margin-bottom--1">United Kingdom (thousands) seasonally adjusted</p>
-
-          <!-- <table class="table-v2 margin-top--2 margin-bottom--6">
-            <tbody>
-              <tr>
-                <th>Year</th>
-                <th class="cell--align-right">UK Population</th>
-                <th class="cell--align-right">0 to 15 years (%)</th>
-                <th class="cell--align-right">16 to 64 years (%)</th>
-                <th class="cell--align-right">65 years and over (%)</th>
-              </tr>
-              <tr>
-                <td>1975</td>
-                <td class="cell--align-right">56,226,000</td>
-                <td class="cell--align-right">24.9</td>
-                <td class="cell--align-right">61.0</td>
-                <td class="cell--align-right">14.1</td>
-              </tr>
-              <tr>
-                <td>1985</td>
-                <td class="cell--align-right">56,554,000</td>
-                <td class="cell--align-right">20.7</td>
-                <td class="cell--align-right">64.1</td>
-                <td class="cell--align-right">15.2</td>
-              </tr>
-            </tbody>
-          </table> -->
+          <p class="font-xxsmall margin-top--4 margin-bottom--1" style="text-align: right;">United Kingdom (thousands) seasonally adjusted</p>
 
         	 <table cellspacing=0 border=0 class="summary-table margin-bottom--4">
               <tbody>
@@ -864,11 +839,11 @@ title: "Labour market status by age group"
             <!-- end of table -->
 
             <p class="font-xsmall">Source: Labour Force Survey</p>
-            <p class="heading-xsmall list-heading">Notes:</p>
+            <!-- <p class="heading-xsmall list-heading">Notes:</p>
             <ul>
               <li class="font-xsmall margin-bottom--1">Id id commodo mollit esse duis et Lorem eu ad laboris ipsum sint proident quis sunt ea.</li>
               <li class="font-xsmall margin-bottom--1">Proident deserunt aliquip culpa officia esse cupidatat qui enim culpa elit in nisi nulla velit eiusmod.</li>
-            </ul>
+            </ul> -->
             <h5 class="margin-bottom--1">Download this table</h5>
             <div class="btn-group">
               <a class="btn btn--primary font-xsmall link--no-underline" href="#">
