copy changes including subtitle

--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -89,7 +89,7 @@ title: "Average weekly earnings"
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
-          <h2>Pay estimates show increases in both nominal and real average earnings</h2>
+          <h2>Estimates of pay show increases in both nominal and real average earnings</h2>
           <p class="font-xsmall">Annual growth rates, Great Britain, April to June 2013 to April to June 2018, seasonally adjusted</p>
         </div>
       </div>
