--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -47,7 +47,7 @@ title: "Employment"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of employment for the UK.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of the number of people in paid work in the UK.</p>
         </div>
       </div>
     </div>
@@ -242,7 +242,7 @@ title: "Employment"
             </i>
             <p>Employees and self-employed people do not account for all people in employment as there are two minor additional categories; unpaid family workers and people on government-supported training and employment programmes.</p>
           </div>
-          
+
           <p class="heading-medium">Fewer workers on zero-hours contracts</p>
           <p class="list-heading">Comparing the estimates for employment by nationality (not seasonally adjusted) for April to June 2018 with those for a year earlier:</p>
           <ul>
