--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -47,7 +47,7 @@ title: "Unemployment"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of unemployment for the UK.</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Latest estimates of the number of people without jobs who are actively seeking work in the UK.</p>
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@ title: "Unemployment"
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <p class="heading-medium">UK unemployment continues to fall</p>
+          <p class="heading-medium">UK unemployment rate continues to fall</p>
           <p><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics#unemployment">Unemployment</a> measures people without a job who have been actively seeking work within the last four weeks and are available to start work within the next two weeks.</p>
 
           <div class="info-alert">
