--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -99,7 +99,7 @@ title: "Average weekly earnings"
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-right--2 padding-bottom--0 padding-left--2 padding-top--4">
-            <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-lg.png" | relative_url }}" class="margin-bottom--3" alt="">
+            <img style="width:100%" src="{{ "/assets/img/charts/Figure-8_lg.jpg" | relative_url }}" class="margin-bottom--3" alt="">
             <p class="font-xxsmall margin-bottom--3">Source: Monthly Wages and Salaries Survey, Office for National Statistics</p>
           </div>
         </div>
