--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -99,7 +99,7 @@ title: "Employment"
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-right--2 padding-bottom--0 padding-left--2 padding-top--4">
-            <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-lg.png" | relative_url }}" class="margin-bottom--3" alt="">
+            <img style="width:100%" src="{{ "/assets/img/charts/Figure-2_lg.jpg" | relative_url }}" class="margin-bottom--3" alt="">
             <p class="font-xxsmall margin-bottom--3">Source: Labour Force Survey, Office for National Statistics</p>
           </div>
         </div>
@@ -215,7 +215,7 @@ title: "Employment"
           <p>The following figure shows that more than half of the annual increase in the number of people in employment (313,000) was due to more women in full-time employment (170,000), with the number of men in full-time employment increasing by 101,000 over the year.</p>
 
           <p class="heading-small">Figure 4: Changes in people in employment in the UK between April to June 2017 and April to June 2018, seasonally adjusted</p>
-          <img style="width:100%" src="{{ "/assets/img/charts/weapons_firearm_chart_lg.png" | relative_url }}" class="" alt="">
+          <img style="width:100%" src="{{ "/assets/img/charts/Figure-4_lg.jpg" | relative_url }}" class="" alt="">
           <p class="font-xsmall">Source: Labour Force Survey, Office for National Statistics</p>
           <h5 class="margin-bottom--1">Download this chart</h5>
           <div class="btn-group margin-bottom--4">
