--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -96,7 +96,7 @@ title: "Labour market"
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-right--2 padding-bottom--0 padding-left--2 padding-top--4">
-            <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-lg.png" | relative_url }}" class="margin-bottom--3" alt="">
+            <img style="width:100%" src="{{ "/assets/img/charts/Figure-1a_lg.jpg" | relative_url }}" class="margin-bottom--3" alt="">
             <p class="font-xxsmall margin-bottom--3">Source: Labour Force Survey, Office for National Statistics</p>
           </div>
         </div>
@@ -192,7 +192,7 @@ title: "Labour market"
 
           <p class="heading-medium">Comparing April to June 2018 with January to March 2018 provides most robust short-term comparison</p>
           <p class="heading-small">Quarterly and annual changes in the number of people in the UK labour market, seasonally adjusted</p>
-          <img style="width:100%" src="{{ "/assets/img/charts/weapons_firearm_chart_lg.png" | relative_url }}" class="" alt="">
+          <img style="width:100%" src="{{ "/assets/img/charts/Figure-1b_lg.jpg" | relative_url }}" class="" alt="">
           <p class="font-xsmall">Source: Labour Force Survey, Office for National Statistics</p>
           <h5 class="margin-bottom--1">Download this chart</h5>
           <div class="btn-group margin-bottom--4">
