--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -99,7 +99,7 @@ title: "Unemployment"
       <div class="col-wrap">
         <div class="col col--md-two-thirds col--lg-two-thirds background--white margin-bottom--3">
           <div class="padding-right--2 padding-bottom--0 padding-left--2 padding-top--4">
-            <img style="width:100%" src="{{ "/assets/img/charts/fraud_crime_highlight-lg.png" | relative_url }}" class="margin-bottom--3" alt="">
+            <img style="width:100%" src="{{ "/assets/img/charts/Figure-11_lg.jpg" | relative_url }}" class="margin-bottom--3" alt="">
             <p class="font-xxsmall margin-bottom--3">Source: Labour Force Survey, Office for National Statistics</p>
           </div>
         </div>
@@ -206,7 +206,7 @@ title: "Unemployment"
 
           <p class="heading-small">The longer picture for UK unemployment rates (people aged 16 years and over)</p>
           <p class="font-xsmall">April to June 2013 to April to June 2018, seasonally adjusted</p>
-          <img style="width:100%" src="{{ "/assets/img/charts/weapons_firearm_chart_lg.png" | relative_url }}" class="" alt="">
+          <img style="width:100%" src="{{ "/assets/img/charts/Figure-12_lg.jpg" | relative_url }}" class="" alt="">
           <p class="font-xsmall">Source: Labour Force Survey, Office for National Statistics</p>
           <h5 class="margin-bottom--1">Download this chart</h5>
           <div class="btn-group margin-bottom--4">
